[gd_scene load_steps=5 format=3 uid="uid://cpy5sdvh4ooji"]

[ext_resource type="Script" path="res://entities/PushBlock/PushBlock.gd" id="1_bnpf8"]
[ext_resource type="AudioStream" uid="uid://ca1vsbrti0yu0" path="res://sounds/Genesis 32X SCD - Sonic the Hedgehog - Sound Effects/Sonic 1/S1_A7.wav" id="2_phj1v"]

[sub_resource type="BoxShape3D" id="BoxShape3D_eyx4s"]
size = Vector3(2, 2, 2)

[sub_resource type="BoxMesh" id="BoxMesh_yk78w"]
size = Vector3(2, 2, 2)

[node name="PushBlock" type="CharacterBody3D" groups=["PushBlock"]]
collision_layer = 16385
script = ExtResource("1_bnpf8")

[node name="CollisionShape3D" type="CollisionShape3D" parent="."]
shape = SubResource("BoxShape3D_eyx4s")

[node name="MeshInstance3D" type="MeshInstance3D" parent="."]
mesh = SubResource("BoxMesh_yk78w")

[node name="SmokeEmitter1" type="Node3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, -1, -1)

[node name="SmokeEmitter2" type="Node3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 1, -1, 0)

[node name="SmokeEmitter3" type="Node3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, -1, 1)

[node name="SmokeEmitter4" type="Node3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -1, -1, 0)

[node name="SndBlockSlide" type="AudioStreamPlayer3D" parent="."]
stream = ExtResource("2_phj1v")
bus = &"SoundEffects"
